--- a/Explorean KOHUNLICH/FadeBig.html
+++ b/Explorean KOHUNLICH/FadeBig.html
@@ -341,7 +341,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-             Somos el hotel Nº1 en la Selva de Chetumal según TripAdvisor
+             Somos el hotel Nº1 en la Selva de Chetumal según TripAdvisor.
             </span>
             <br/>  
             
