--- a/Explorean KOHUNLICH/slider.html
+++ b/Explorean KOHUNLICH/slider.html
@@ -253,7 +253,7 @@
                 </div>
                 <div style="margin-top:13px; margin-left:0px; margin-right: 10px;line-height: 0.4pt;">
                     <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:16px; text-align:left;">
-                    Si buscas calidad, comodidad y exclusividad, somos el hotel Nº1 en la Selva de Chetumal según TripAdvisor</span>
+                    Si buscas calidad, comodidad y exclusividad, somos el hotel Nº1 en la Selva de Chetumal según TripAdvisor.</span>
                     
                      
                        <img class="logo" style="margin-top: 5px;" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/explorean_kohunlich_zpsw9cdu43e.png" alt=""> </div>
