--- a/Explorean KOHUNLICH/FadeBig.html
+++ b/Explorean KOHUNLICH/FadeBig.html
@@ -331,13 +331,13 @@
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
        
         <div class="tgx_cover bg cover-1 carousel-item item-1">
-            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">Regístrate ahora</span></div>
+            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">¿Te lo vas a perder?</span></div>
         </div>
         <div class="tgx_cover bg cover-2 carousel-item item-2">
-            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">Regístrate ahora</span></div>
+            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">¿Te lo vas a perder?</span></div>
         </div>
         <div class="tgx_cover bg cover-3 carousel-item item-3">
-            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">Regístrate ahora</span></div>
+            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small">¿Te lo vas a perder?</span></div>
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
