--- a/Explorean KOHUNLICH/slider.html
+++ b/Explorean KOHUNLICH/slider.html
@@ -70,7 +70,7 @@
             .cta {
             position: absolute;
             bottom: 85px;
-            width: 100px;
+            width: 125px;
             line-height: 1.3em;
             z-index: 5;
             margin-left: 48%;
@@ -240,7 +240,7 @@
 	 <div class="te-container">
      <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Regístrate ahora</span></div>
+               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¿Te lo vas a perder?</span></div>
                 <div class="te-images"> 
                 <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/COZUMEL02_zpsgmcpmixm.png" alt="" />
                 <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/KOHUNLICH05_zpsfuzw4qbt.png" alt="" /> 
