--- a/Explorean CUZUMEL/slider.html
+++ b/Explorean CUZUMEL/slider.html
@@ -75,7 +75,7 @@
             z-index: 5;
             margin-left: 48%;
             left: -55px;
-            background-color: #8b6b23;
+            background-color: #;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -240,7 +240,7 @@
 	 <div class="te-container">
      <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Regístrate ahora</span></div>
+               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;"></span></div>
                 <div class="te-images"> 
                 <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/COZUMEL01_zpsyl8i75wy.png" alt="" />
                 <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/COZUMEL02_zpsgmcpmixm.png" alt="" /> 
