--- a/POPCON/Cube.html
+++ b/POPCON/Cube.html
@@ -496,120 +496,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i20.shape.css:shape/base/css*/
 #i20 { background-color: #fafafa; opacity: 1;
 }
-/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
-#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+/*#/#*//*#visibility.css:visibility/globalcss*/
+.visibility-hidden, .visibility-hidden * {
+    visibility: hidden !important;
 }
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 275px; height: 53px;
-        -ms-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
-}
-/*#/#*//*#i4.i130.image.css:image/base/css*/
-#i130 { opacity: 1; }
-/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 170px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i207.image.css:image/base/css*/
-#i207 { opacity: 1; }
-/*#/#*//*#i207.i208.positioning.css:positioning/base/css.1*/
-#i207 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 22px;
-        -ms-transform: translate(0, 0) translate(36px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(36px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(36px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(36px, 223px) rotate(0deg);
-}
-/*#/#*//*#i4.i209.image.css:image/base/css*/
-#i209 { opacity: 1; }
-/*#/#*//*#i209.i210.positioning.css:positioning/base/css.1*/
-#i209 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 22px;
-        -ms-transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
-}
-/*#/#*//*#i4.i213.image.css:image/base/css*/
-#i213 { opacity: 1; }
-/*#/#*//*#i213.i214.positioning.css:positioning/base/css.1*/
-#i213 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 22px;
-        -ms-transform: translate(0, 0) translate(7px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(7px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(7px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(7px, 223px) rotate(0deg);
-}
-/*#/#*//*#i4.i215.image.css:image/base/css*/
-#i215 { opacity: 1; }
-/*#/#*//*#i215.i216.positioning.css:positioning/base/css.2*/
-#i215 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 35px;
-        -ms-transform: translate(0, 0) translate(260px, 212px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(260px, 212px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(260px, 212px) rotate(0deg);
-        transform: translate(0, 0) translate(260px, 212px) rotate(0deg);
-}
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i4 { cursor: pointer; }
-/*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
-#i30 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i181.text.css:text/base/css*/
-#i181 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i181.i182.positioning.css:positioning/base/css.1*/
-#i181 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 276px; height: 57px;
-        -ms-transform: translate(-50%, -50%) translate(-3px, 76px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-3px, 76px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-3px, 76px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-3px, 76px) rotate(0deg);
-}
-/*#/#*//*#i5.i199.image.css:image/base/css*/
-#i199 { opacity: 1; }
-/*#/#*//*#i199.i200.positioning.css:positioning/base/css.1*/
-#i199 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 35px;
-        -ms-transform: translate(0, 0) translate(261px, 212px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(261px, 212px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(261px, 212px) rotate(0deg);
-        transform: translate(0, 0) translate(261px, 212px) rotate(0deg);
-}
-/*#/#*//*#i5.i58.image.css:image/base/css*/
-#i58 { opacity: 1; }
-/*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 170px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i203.image.css:image/base/css*/
-#i203 { opacity: 1; }
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
@@ -739,10 +629,120 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#visibility.css:visibility/globalcss*/
-.visibility-hidden, .visibility-hidden * {
-    visibility: hidden !important;
+/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
+#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i4.i14.text.css:text/base/css*/
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 275px; height: 53px;
+        -ms-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
+}
+/*#/#*//*#i4.i130.image.css:image/base/css*/
+#i130 { opacity: 1; }
+/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 170px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i207.image.css:image/base/css*/
+#i207 { opacity: 1; }
+/*#/#*//*#i207.i208.positioning.css:positioning/base/css.1*/
+#i207 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 22px;
+        -ms-transform: translate(0, 0) translate(36px, 223px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(36px, 223px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(36px, 223px) rotate(0deg);
+        transform: translate(0, 0) translate(36px, 223px) rotate(0deg);
+}
+/*#/#*//*#i4.i209.image.css:image/base/css*/
+#i209 { opacity: 1; }
+/*#/#*//*#i209.i210.positioning.css:positioning/base/css.1*/
+#i209 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 22px;
+        -ms-transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
+        transform: translate(0, 0) translate(65px, 223px) rotate(0deg);
+}
+/*#/#*//*#i4.i213.image.css:image/base/css*/
+#i213 { opacity: 1; }
+/*#/#*//*#i213.i214.positioning.css:positioning/base/css.1*/
+#i213 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 22px;
+        -ms-transform: translate(0, 0) translate(7px, 223px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(7px, 223px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(7px, 223px) rotate(0deg);
+        transform: translate(0, 0) translate(7px, 223px) rotate(0deg);
+}
+/*#/#*//*#i4.i215.image.css:image/base/css*/
+#i215 { opacity: 1; }
+/*#/#*//*#i215.i216.positioning.css:positioning/base/css.2*/
+#i215 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 35px;
+        -ms-transform: translate(0, 0) translate(260px, 212px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(260px, 212px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(260px, 212px) rotate(0deg);
+        transform: translate(0, 0) translate(260px, 212px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i91 { cursor: pointer; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i4 { cursor: pointer; }
+/*#/#*//*#i5.i30.shape.css:shape/base/css*/
+#i30 { background-color: #fafafa; opacity: 1;
+}
+/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
+#i30 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i5.i181.text.css:text/base/css*/
+#i181 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i181.i182.positioning.css:positioning/base/css.1*/
+#i181 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 276px; height: 57px;
+        -ms-transform: translate(-50%, -50%) translate(-3px, 76px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-3px, 76px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-3px, 76px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-3px, 76px) rotate(0deg);
+}
+/*#/#*//*#i5.i199.image.css:image/base/css*/
+#i199 { opacity: 1; }
+/*#/#*//*#i199.i200.positioning.css:positioning/base/css.1*/
+#i199 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 35px;
+        -ms-transform: translate(0, 0) translate(261px, 212px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(261px, 212px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(261px, 212px) rotate(0deg);
+        transform: translate(0, 0) translate(261px, 212px) rotate(0deg);
+}
+/*#/#*//*#i5.i58.image.css:image/base/css*/
+#i58 { opacity: 1; }
+/*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 170px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i5.i203.image.css:image/base/css*/
+#i203 { opacity: 1; }
 /*#/#*//*#i203.i204.positioning.css:positioning/base/css.1*/
 #i203 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 22px;
         -ms-transform: translate(0, 0) translate(64px, 223px) rotate(0deg);
@@ -964,7 +964,7 @@ cube_i2.init({
     autoRotateEnabled: true,
     autoRotateDelay: 3,
     autoRotateDirection: 'rotateNext',
-    defaultButtonsOnPanels: true,
+    defaultButtonsOnPanels: false,
     transition: 0.8
 });
 
@@ -996,7 +996,11 @@ document.getElementById('i91').addEventListener('click', function(e){
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i4').addEventListener('click', function(e){
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i5.i199.image.js:image/base/js*/
 
 /*#/#*//*#i5.i58.image.js:image/base/js*/
@@ -1016,7 +1020,11 @@ document.getElementById('i95').addEventListener('click', function(e){
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i191.image.js:image/base/js*/
@@ -1036,7 +1044,11 @@ document.getElementById('i99').addEventListener('click', function(e){
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i6').addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i217.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
