fade ajuste cta cubo

--- a/Explorean KOHUNLICH/Cube.html
+++ b/Explorean KOHUNLICH/Cube.html
@@ -521,17 +521,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i4.i188.button.css:button/base/css*/
-#i188 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(150,108,0,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 25px; border-color: rgba(150,108,0,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i188:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i188:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i188.i189.positioning.css:positioning/base/css.2*/
-#i188 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 124px; height: 30px;
-        -ms-transform: translate(0, 0) translate(84px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(84px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(84px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(84px, 145px) rotate(0deg);
-}
 /*#/#*//*#i4.i190.image.css:image/base/css*/
 #i190 { opacity: 1; }
 /*#/#*//*#i190.i191.positioning.css:positioning/base/css.2*/
@@ -540,6 +529,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
         transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
+}
+/*#/#*//*#i4.i230.shape.css:shape/base/css*/
+#i230 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i231.i232.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i230 { cursor: pointer; }
+/*#/#*//*#i230.i233.positioning.css:positioning/base/css.1*/
+#i230 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i184.image.css:image/base/css*/
 #i184 { opacity: 1; }
@@ -561,6 +562,59 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
+/*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
+        -ms-transform: translate(0, 0) translate(6px, 225px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 225px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 225px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 225px) rotate(0deg);
+}
+/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i4 { cursor: pointer; }
+/*#/#*//*#i5.i30.shape.css:shape/base/css*/
+#i30 { background-color: #fafafa; opacity: 1;
+}
+/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
+#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i5.i24.text.css:text/base/css*/
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+/*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 49px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+}
+/*#/#*//*#i5.i58.image.css:image/base/css*/
+#i58 { opacity: 1; }
+/*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i5.i192.image.css:image/base/css*/
+#i192 { opacity: 1; }
+/*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
+#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 66px; height: 31px;
+        -ms-transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
+        transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
+}
+/*#/#*//*#visibility.css:visibility/globalcss*/
+.visibility-hidden, .visibility-hidden * {
+    visibility: hidden !important;
+}
+/*#/#*//*#i5.i95.shape.css:shape/base/css*/
+#i95 { background-color: #dedede; opacity: 0.00;
+}
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
@@ -690,59 +744,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#visibility.css:visibility/globalcss*/
-.visibility-hidden, .visibility-hidden * {
-    visibility: hidden !important;
-}
-/*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(6px, 225px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 225px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 225px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 225px) rotate(0deg);
-}
-/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i4 { cursor: pointer; }
-/*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
-#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
-/*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 49px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-}
-/*#/#*//*#i5.i58.image.css:image/base/css*/
-#i58 { opacity: 1; }
-/*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i192.image.css:image/base/css*/
-#i192 { opacity: 1; }
-/*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 66px; height: 31px;
-        -ms-transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
-        transform: translate(0, 0) translate(230px, 216px) rotate(0deg);
-}
-/*#/#*//*#i5.i95.shape.css:shape/base/css*/
-#i95 { background-color: #dedede; opacity: 0.00;
-}
 /*#/#*//*#i175.i176.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i95 { cursor: pointer; }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
@@ -883,10 +884,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 En Explorean Kohunlinch tendrás muchas opciones para elegir!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/KOHUNLICH06_zpsnnv1ytyt.png"/>
-<!--#/#--><!--#i4.i188.button.html:button/html-->
-<button id="i188">Regístrate ahora</button>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
 <img id="i190" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/explorean_kohunlich_zpsw9cdu43e.png"/>
+<!--#/#--><!--#i4.i230.shape.html:shape/html-->
+<div id="i230"></div>
 <!--#/#--><!--#i4.i184.image.html:image/html-->
 <img id="i184" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/TWgold_zpskkcg4ksf.png"/>
 <!--#/#--><!--#i4.i186.image.html:image/html-->
@@ -974,8 +975,6 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
-/*#/#*//*#i188.i189.positioning.js:positioning/base/js.2*/
-bmShow('i188');
 /*#/#*//*#i4.i190.image.js:image/base/js*/
 
 /*#/#*//*#i190.i191.positioning.js:positioning/base/js.2*/
@@ -1031,6 +1030,13 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i230.i231.actions.js:actions/base/js*/
+/* Name: On Click; */
+document.getElementById('i230').addEventListener('click', function(e){
+    /*#i231.i232.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.explorean.com/kohunlich.html'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1208,16 +1214,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i188.button.meta:button/meta*/
-name: Regístrate ahora;
-customName: false;
-/*#/#*//*#i188.i189.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i190.image.meta:image/meta*/
 name: explorean_kohunlich_zpsw9cdu43e.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i190.i191.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i230.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i230.i233.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i184.image.meta:image/meta*/
 name: TWgold_zpskkcg4ksf.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
