--- a/POPCON/videobigprueba.html
+++ b/POPCON/videobigprueba.html
@@ -310,10 +310,10 @@
            
         <div class="tgx_text">
             <span class="tgx_text_title tgx_text_bold">
-              ¿Te gustan los videojuegos?<br> ¿eres fan de los comics? <br>¿te apasiona el cosplay? 
+              ¿Te gustan los videojuegos?<br> ¿Eres fan de los comics? <br>¿Te apasiona el cosplay? 
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 5px;"> ¡Entonces esta <b>experiencia ingualable</b> es para tí! </p>
+                <p style="margin-top: 5px;"> ¡Entonces esta <b>experiencia es ingualable</b> para tí! </p>
                 <h4 style="color: #850202;">#estoespopcon</h4>
             </span>
 
