--- a/POPCON/videobigprueba.html
+++ b/POPCON/videobigprueba.html
@@ -313,7 +313,7 @@
               ¿Te gustan los videojuegos?<br> ¿Eres fan de los comics? <br>¿Te apasiona el cosplay? 
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 5px;"> ¡Entonces esta <b>experiencia es ingualable</b> para tí! </p>
+                <p style="margin-top: 5px;"> ¡Entonces esta <b>experiencia es inigualable</b> para tí! </p>
                 <h4 style="color: #850202;">#estoespopcon</h4>
             </span>
 
